import issues gone, continuing integration of NPC's and other logic.

--- a/main.html
+++ b/main.html
@@ -10,6 +10,6 @@
 <body>
     
 
-    <pyxel-run root="." name="main.py"></pyxel-run>
+    <pyxel-run name="dragons_tail.py"></pyxel-run>
 </body>
 </html>
