combat functional but sleep timer/text rough. inn functional except for save. included pyxapp and full game html

--- a/main.html
+++ b/main.html
@@ -10,6 +10,6 @@
 <body>
     
 
-    <pyxel-run name="dragons_tail.py"></pyxel-run>
+    <pyxel-run name="pyxel_code"></pyxel-run>
 </body>
 </html>
